--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/brain.icon.png">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title>Jessica Quintanilla - Neuroscience</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Jessica Quintanilla</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/jessicaquintanilla.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,14 +58,16 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Jessica Quintanilla
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Neuroscience📚</div>
+        <p class="lead mb-4">I am a first generation student in my family and in seeing the sacrifices my parents have made for me has only given me motivation to keep going. In comparison to my siblings, I had the advantage to be born in the United States and make the best out of the opportunities that continue to be offered to me. At the same time, I discovered at an early age the direction in which career I wanted to accomplish. I knew that I wanted to work in the medical field because I want to help people like I have been helped. At the age of seventeen years old, I was diagnosed with Hashimoto's Disease that affects the thyroid glands. This disease is incurable and completely has changed my life forever. I understand the position patients that are facing similar circumilartimes, but I also see the perspective of patients that may find themselves in worst situations. This has made me much more appreciative of my life and given me the determination to follow the path to become a doctor. 
+<br><br>
 
-        Enter bio here<br><br>
+        Furthermore, I took it upon myself to learn more about the medical field by researching and interning at different places. During the Summer of my Junior year, I spent that time interning at a clinic where I got hands-on experience working with patients and shadowing the doctor. The doctor at the clinic was a physician that worked with patients of all ages, so it was interesting for me to observe sometimes what specialist patients would attend. Other times, it was interesting because every patient was different and I could never guess the reasoning to why they were coming in for. Lucky for me, I got to observe every patient that came in because my position was in the front office of the clinic. So, I also worked with the paperwork and attended the calls that came in. From there, I would assess patients by scheducing an appointment, transfering calls, or helping the patient in the best way I could. This experience gave an insight into the medical field and has encouraged me more to work towards that. 
+<br><br>
 
-        Enter bio here
+        Therefore, I also applied myself to learn more about the sciences by exceeding the amount to take in high school. This challenged me because at the time I would take several advanced placement courses. However, although it was challenging I found myself to excel and it led me to choose the career I am now studying in college which is Neuroscience. With this my goal is to get into medical school after college and become an endocrinologist. I want to learn more about my own disease and assist people with my same condition in doing so. I know it can be having this condition and being a doctor that understands is helping towards a patient who can even be new to the condition. Currently, I’m searching for volunteer work I can do that involves working around medical professionals in hopes to only learn more and gain experience as well.
         </p>
         <div class="social-icons">
           <a target="_blank" href="https://linkedin.com">
@@ -92,48 +94,50 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <h3 class="mb-0">Group Leader</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.brightprospect.org/">Bright Prospect</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Mentor students <br> 
+              • Support and communicate with peers<br>
+              • Developed teamwork skills<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">August 2016 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <h3 class="mb-0">Front Office Assistant</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu"> University of California Riverside</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Attended phone calls and assisted patients with their questions<br>
+              • Assisted the doctor with Spanish speakers by translating <br>
+              • Managed paperwork  <br>
+              • Arranged appointments<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">September 2019 - November 2019</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Medical Assistant</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.showmelocal.com/profile.aspx?bid=4914989"> St. John Medical Clinic </a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Attended phone calls and assisted patients with their questions<br>
+            • Assisted the doctor with Spanish speakers by translating<br>
+            • Managed paperwork<br>
+            • Arranged appointments<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">July 2016 - August 2016</span>
           </div>
         </div>
 
@@ -151,34 +155,34 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <h3 class="mb-0">Fremont Academy of Engineering and Design</h3>
+            <div class="subheading mb-3">High School Diploma</div>
+            <div></div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2014 - May 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">B.A. Neuroscience</div>
+            <div></div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">September 2019 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <h3 class="mb-0"></h3>
+            <div class="subheading mb-3"></div>
+            <div></div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary"></span>
           </div>
         </div>
 
@@ -191,7 +195,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/medical 1.jpg" width="500px">
+            <img src="img/medical 2.jpg" width="500px">
+            <img src="img/medical 3.jpg" width="500px">
+            <img src="img/medical 4.jpg" width="500px">
         </center>
       </div>
     </section>
@@ -199,7 +206,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Jessica Quintanilla</center><br>
 
 
   </div>
