--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
         Therefore, I also applied myself to learn more about the sciences by exceeding the amount to take in high school. This challenged me because at the time I would take several advanced placement courses. However, although it was challenging I found myself to excel and it led me to choose the career I am now studying in college which is Neuroscience. With this my goal is to get into medical school after college and become an endocrinologist. I want to learn more about my own disease and assist people with my same condition in doing so. I know it can be having this condition and being a doctor that understands is helping towards a patient who can even be new to the condition. Currently, I’m searching for volunteer work I can do that involves working around medical professionals in hopes to only learn more and gain experience as well.
         </p>
         <div class="social-icons">
-          <a target="_blank" href="https://linkedin.com">
+          <a target="_blank" href="https://www.linkedin.com/in/jessica-quintanilla-919633195">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" href="https://github.com">
+          <a target="_blank" href="https://github.com/JQ230">
             <i class="fab fa-github"></i>
           </a>
           <a target="_blank" href="https://twitter.com">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" href="mailto:youremail@gmail.com">
+          <a target="_blank" href="mailto:jessicaquintanilla65@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
